# Resnet50_ImageNet1k

./: .gitignore  Dockerfile  LOC_synset_mapping.txt  README.md  app.py  pyproject.toml  requirements.txt
logs/image_net_classifications/version_0/: events.out.tfevents.1735769543.ip-172-31-33-164.61673.0
logs/image_net_classifications/version_1/: events.out.tfevents.1735770290.ip-172-31-33-164.62686.0
logs/image_net_classifications/version_2/: events.out.tfevents.1736007032.ip-172-31-33-164.100292.0
logs/image_net_classifications/version_3/: events.out.tfevents.1736012164.ip-172-31-33-164.101308.0
logs/image_net_classifications/version_4/: events.out.tfevents.1736012240.ip-172-31-33-164.101807.0
logs/image_net_classifications/version_5/: events.out.tfevents.1736033226.ip-172-31-33-164.103618.0
logs/image_net_classifications/version_6/: events.out.tfevents.1736034000.ip-172-31-33-164.104104.0
logs/image_net_classifications/version_7/: events.out.tfevents.1736034052.ip-172-31-33-164.104154.0
src/: eval.py  infer.py  train.py
src/datamodules/: imagenet_datamodule.py
src/models/: classifier.py
