[tool.poetry]
name = "dog-breed-classifier"
version = "0.1.0"
description = "Dog Breed Classification using PyTorch Lightning"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytorch-lightning = "2.4.0"
torchviz = "0.0.2"
timm = "1.0.9"
split-folders = "0.5.1"
torch = "^2.0.0"
torchvision = "^0.15.0"
pillow = "^9.0.0"
matplotlib = "^3.5.0"
black>="24.10.0",
lightning[extra]>=2.4.0",
    "loguru>=0.7.2",
    "rich>=13.9.4",
    "tensorboard>=2.18.0",
    "timm>=1.0.11",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
